<resources>
    <string name="app_name">Mosquito Squad</string>
    <string name="action_locations">Locations</string>
    <string name="action_contactus">Contact Us</string>
    <string name="alertTheSquad">Alert the Squad!</string>
    <string name="interestedIn">IM INTERESTED IN:</string>
    <string name="mosquitoControl">Mosquito Control</string>
    <string name="tickControl">Tick Control</string>
    <string name="names">NAME</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="address">ADDRESS</string>
    <string name="streetAddress">Street Address</string>
    <string name="addressLine2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipCode">Zip Code</string>
    <string name="phoneNumberC">Phone Number</string>
    <string name="hearAboutUS">HOW DID YOU HEAR ABOUT US?</string>
    <string name="sendRequest">Send Request</string>
    <string name="action_different">What makes us different?</string>
    <string name="services">Our Services</string>
    <string name="login">Login</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="newUser">Register</string>
    <string name="buyServices">Rates</string>
    <string name="name">Andrew and Katherine Ratka</string>
    <string name="address1">1125 Tuckaway Lane Suite A</string>
    <string name="address2">Menasha, WI 54952</string>
    <string name="phoneNumber"><u>(920) 558-4330</u></string>
    <string name="greetings">Greetings from Mosquito Squad</string>
    <string name="welcome">Welcome to the new Mosquito Squad of the Fox Cities and Door County mobile app.</string>
    <string name="headerHome">Enjoy the Outdoors</string>
    <string name="locations">Locations</string>
    <string name="differentHeader">What Makes Us Different?</string>
    <string name="differentContent">Our family is proud to bring Mosquito Squad services to Northeastern Wisconsin. Mosquitoes have plagued our backyard every summer just like everyone else. In search of a solution, we found Mosquito Squad. Were we skeptical at first? Of course. Then we tried it and were so amazed by the results, we knew other Wisconsin families and businesses would love it. Our mission is to make your backyard, businesses, patios, special outdoor events mosquito and tick free.</string>
    <string name="contentHome">If the nuisance of ticks and mosquitoes prevents you from being outdoors and doing what you enjoy, our mosquito spray is the solution. With the mosquito problem increasing every year in the Fox Cities area, and Door County it is important to make sure your family is protected from the diseases and viruses caused by mosquitoes and ticks.  Our all-natural mosquito repellant spray and our traditional mosquito spray will allow you to enjoy your backyard during the best times of the year without the worry of bites from mosquitoes.</string>
    <string name="signup">Sign Up!</string>
    <string name="doneRegister">Done</string>
    <string name="serviceOptions">Service Options:</string>
    <string name="messages">Message the Owner</string>
    <string name="applicators">Applicators</string>
    <string name="addApp">Add Applicator:</string>
    <string name="licenseNum">LICENSE NUMBER</string>
    <string name="ratesTitle">Here Are Our Rates</string>
</resources>
