<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mosquitosquad.foxcities.mosquad.MainActivity">
    <item
        android:id="@+id/action_locations"
        android:orderInCategory="100"
        android:title="@string/action_locations"
        app:showAsAction="never" />

    <item
        android:id="@+id/services"
        android:orderInCategory="101"
        android:title="@string/services"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_different"
        android:orderInCategory="102"
        android:title="@string/action_different"
        app:showAsAction="never" />

    <item
        android:id="@+id/login"
        android:orderInCategory="103"
        android:title="@string/login"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contactus"
        android:orderInCategory="104"
        android:title="@string/action_contactus"
        app:showAsAction="never" />

</menu>
