<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="false"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/alertTheSquad"
            android:textColor="@color/orange"
            android:id="@+id/textView20"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mosquitoControl"
            android:id="@+id/checkBox"
            android:layout_below="@+id/textView21"
            android:layout_alignLeft="@+id/textView21"
            android:layout_alignStart="@+id/textView21" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tickControl"
            android:id="@+id/checkBox2"
            android:layout_below="@+id/checkBox"
            android:layout_alignLeft="@+id/checkBox"
            android:layout_alignStart="@+id/checkBox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/interestedIn"
            android:id="@+id/textView21"
            android:layout_below="@+id/textView20"
            android:layout_alignLeft="@+id/textView20"
            android:layout_alignStart="@+id/textView20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/names"
            android:id="@+id/textView22"
            android:layout_above="@+id/editTextFName"
            android:layout_alignLeft="@+id/editTextFName"
            android:layout_alignStart="@+id/editTextFName" />

        <EditText
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/fName"
            android:ems="10"
            android:id="@+id/editTextFName"
            android:layout_alignTop="@+id/checkBox"
            android:layout_toRightOf="@+id/textView20"
            android:layout_toEndOf="@+id/textView20" />

        <EditText
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/lName"
            android:ems="10"
            android:id="@+id/editTextLName"
            android:layout_below="@+id/checkBox"
            android:layout_alignLeft="@+id/editTextFName"
            android:layout_alignStart="@+id/editTextFName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/emailAddress"
            android:textAllCaps="true"
            android:id="@+id/textView23"
            android:layout_marginTop="19dp"
            android:layout_below="@+id/editText5"
            android:layout_alignLeft="@+id/textView24"
            android:layout_alignStart="@+id/textView24" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail"
            android:layout_below="@+id/textView23"
            android:layout_alignLeft="@+id/textView23"
            android:layout_alignStart="@+id/textView23"
            android:layout_alignRight="@+id/editTextLName"
            android:layout_alignEnd="@+id/editTextLName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/address"
            android:id="@+id/textView24"
            android:layout_below="@+id/editTextLName"
            android:layout_alignLeft="@+id/checkBox2"
            android:layout_alignStart="@+id/checkBox2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/streetAddress"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_below="@+id/textView24"
            android:layout_alignLeft="@+id/textView24"
            android:layout_alignStart="@+id/textView24"
            android:layout_alignRight="@+id/editTextEmail"
            android:layout_alignEnd="@+id/editTextEmail" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/addressLine2"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_below="@+id/editText"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_alignRight="@+id/editText"
            android:layout_alignEnd="@+id/editText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:hint="@string/city"
            android:layout_below="@+id/editText2"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignStart="@+id/editText2"
            android:layout_toLeftOf="@+id/editText4"
            android:layout_toStartOf="@+id/editText4" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:hint="@string/state"
            android:maxLength="2"
            android:layout_alignBottom="@+id/editText3"
            android:layout_alignLeft="@+id/editTextLName"
            android:layout_alignStart="@+id/editTextLName"
            android:layout_alignRight="@+id/editText2"
            android:layout_alignEnd="@+id/editText2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/zipCode"
            android:maxLength="5"
            android:ems="10"
            android:id="@+id/editText5"
            android:layout_below="@+id/editText3"
            android:layout_alignLeft="@+id/editText3"
            android:layout_alignStart="@+id/editText3"
            android:layout_alignRight="@+id/editText3"
            android:layout_alignEnd="@+id/editText3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/phoneNumberC"
            android:id="@+id/textView25"
            android:layout_below="@+id/editTextEmail"
            android:layout_alignLeft="@+id/editTextEmail"
            android:layout_alignStart="@+id/editTextEmail" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"
            android:ems="10"
            android:id="@+id/editText6"
            android:layout_below="@+id/textView26"
            android:layout_alignLeft="@+id/textView25"
            android:layout_alignStart="@+id/textView25"
            android:layout_alignRight="@+id/editText5"
            android:layout_alignEnd="@+id/editText5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/hearAboutUS"
            android:id="@+id/textView26"
            android:layout_alignTop="@+id/textView25"
            android:layout_toRightOf="@+id/editText6"
            android:layout_toEndOf="@+id/editText6" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_below="@+id/textView26"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/editText6"
            android:layout_toEndOf="@+id/editText6" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendRequest"
            android:textColor="#FFFFFF"
            android:id="@+id/buttonSendRequest"
            android:background="@color/orange"
            android:layout_marginBottom="27dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/editText6"
            android:layout_alignStart="@+id/editText6"
            android:layout_alignRight="@+id/editTextEmail"
            android:layout_alignEnd="@+id/editTextEmail" />

    </RelativeLayout>

</ScrollView>