<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mosquitosquad.foxcities.mosquad.ContactUsActivity">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="400"
        android:title="Home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_locations"
        android:orderInCategory="401"
        android:title="@string/services"
        app:showAsAction="never" />

    <item
        android:id="@+id/services"
        android:orderInCategory="402"
        android:title="@string/action_different"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_different"
        android:orderInCategory="403"
        android:title="@string/login"
        app:showAsAction="never" />

    <item
        android:id="@+id/login"
        android:orderInCategory="404"
        android:title="@string/login"
        app:showAsAction="never" />
</menu>